--- a/test.ipynb
+++ b/test.ipynb
@@ -2457,6 +2457,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['January', 'February', 'March', 'April', 'May', 'June', 'July',\n",
+       "       'August', 'September', 'October', 'November', 'December'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Months = moving_avg['months'].values\n",
+    "Months"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([Decimal('155340130.000000'), Decimal('147842659.500000'),\n",
+       "       Decimal('149099290.000000'), Decimal('149497368.500000'),\n",
+       "       Decimal('151595866.000000'), Decimal('152391913.500000'),\n",
+       "       Decimal('151941736.500000'), Decimal('153888109.000000'),\n",
+       "       Decimal('149640559.000000'), Decimal('149630423.500000'),\n",
+       "       Decimal('149294489.000000'), Decimal('143933044.500000')],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Move_avg = moving_avg['Moving_avg'].values\n",
+    "Move_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
